TAG: qcreports_db-6-0-22-29
DATE: 01/23/2022
STAFF: sc
wts2-1100/fl2-146/New custom report for extracted text
pwi/BIB_ExtractedTextByMGIIDs.py

TAG: qcreports_db-6-0-22-28
TAG: qcreports_db-6-0-22-27
DATE: 01/13/2022
STAFF: sc
wts2-1091 - weekly/ALL_NomenCheck.py

TAG: qcreports_db-6-0-22-26
DATE: 12/22/2022
STAFF: sc
WTS2-1077 add PubMed ids to HT overview report
mgd/GXD_HTOverview.py

TAG: qcreports_db-6-0-22-25
TAG: qcreports_db-6-0-22-24
TAG: qcreports_db-6-0-22-23
DATE: 12/14/2022, 12/15/2022
STAFF: lec
wts2-1073/Titles come in from pubmed that say 'dagger'"
monthly/BIB_Dagger.sql

TAG: qcreports_db-6-0-22-22
TAG: qcreports_db-6-0-22-21
TAG: qcreports_db-6-0-22-20
TAG: qcreports_db-6-0-22-19
DATE: 12/01/2022, 12/07/2022
STAFF: lec
fl2/gxd secondary triage
monthly/GXD_NotRouted.py
weekly/WF_GXD_secondary.py

TAG: qcreports_db-6-0-22-18
DATE: 11/30/2022
STAFF: lec
fl2/gxd secondary triage
weekly/WF_GXD_secondary.py

TAG: qcreports_db-6-0-22-17
DATE: 11/25/2022
STAFF: lec
wts2-1046/Move PWI/GO/Potential GO Reference Report to qcreports_db/pwi

TAG: qcreports_db-6-0-22-16
TAG: qcreports_db-6-0-22-15
TAG: qcreports_db-6-0-22-14
TAG: qcreports_db-6-0-22-13
TAG: qcreports_db-6-0-22-12
TAG: qcreports_db-6-0-22-11
TAG: qcreports_db-6-0-22-10
TAG: qcreports_db-6-0-22-9
DATE: 11/10/2022, 11/14/2022
STAFF: lec
wts2-888/SQA: PWI/Custom Reports/new pwi folder
wts2-1031/Divide data in nomen QC reports
modified:   mgd/HMD_SymbolDiffs.py

TAG: qcreports_db-6-0-22-8
DATE: 11/08/2022
STAFF: lec
wts2-1031/Divide data in nomen QC reports
modified:   mgd/HMD_SymbolDiffs.py

TAG: qcreports_db-6-0-22-7
DATE: 10/14/2022
STAFF: lec
wts2-1009/Additional GXD QC report for Probes
mgd/GXD_ProbeAntibody.sql
monthly/PRB_Reference.sql

TAG: qcreports_db-6-0-22-6
DATE: 10/04/2022
STAFF: lec
wts2-992/identify HT index experiments with associated PMID used by GXD in MasterBib
weekly/GXD_HTExpPubMedID.sql

TAG: qcreports_db-6-0-22-5
DATE: 09/09/2022
STAFF: lec