@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-22-??
+DATE: 02/01/2023
+STAFF: lec
+wts2-1198/fl2-171/exclude cell line, deleted and certain other alleles
+weekly/ALL_MolNotesNoMP.py
+
 TAG: qcreports_db-6-0-22-29
 DATE: 01/23/2022
 STAFF: sc
